--- a/wordcraze/index.html
+++ b/wordcraze/index.html
@@ -6,7 +6,7 @@
 <html>
 	<head>
         <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-		<script src="https://raw.githubusercontent.com/leogps/wordcraze/master/wordcraze.js"></script>
+		<script src="https://rawgit.com/leogps/wordcraze/master/wordcraze.js"></script>
         <title>Word Craze - by leogps</title>
 	</head>
     
