--- a/maze-generator/index.html
+++ b/maze-generator/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<script type="text/javascript" src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+		<script type="text/javascript" src="//code.jquery.com/jquery-1.12.0.min.js"></script>
 		<script src="https://rawgit.com/leogps/maze-generator/master/maze-generator.js"></script>
 	</head>
 
