--- a/maze-generator/index.html
+++ b/maze-generator/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-		<script src="https://raw.githubusercontent.com/leogps/maze-generator/master/maze-generator.js"></script>
+		<script type="text/javascript" src="https://raw.githubusercontent.com/leogps/maze-generator/master/maze-generator.js"></script>
 	</head>
 
 	<body>
